--- a/chatbot/config.yml
+++ b/chatbot/config.yml
@@ -7,42 +7,71 @@ assistant_id: relieflink_chatbot
 
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
-language: en
+language: vi  # Vietnamese language
 
 pipeline:
-# No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
-# If you'd like to customize it, uncomment and adjust the pipeline.
-# See https://rasa.com/docs/rasa/tuning-your-model for more information.
+  # Tokenizer phù hợp với tiếng Việt
   - name: WhitespaceTokenizer
+    intent_tokenization_flag: false
+    intent_split_symbol: "_"
+  
+  # Regex patterns
   - name: RegexFeaturizer
+  
+  # Lexical features
   - name: LexicalSyntacticFeaturizer
+  
+  # Bag of words (word-level)
   - name: CountVectorsFeaturizer
+    analyzer: word
+    min_ngram: 1
+    max_ngram: 2
+  
+  # Character n-grams (tốt cho tiếng Việt)
   - name: CountVectorsFeaturizer
     analyzer: char_wb
     min_ngram: 1
     max_ngram: 4
+  
+  # Intent classifier
   - name: DIETClassifier
-    epochs: 100
+    epochs: 150
     constrain_similarities: true
+    entity_recognition: true
+    BILOU_flag: true
+  
+  # Entity synonyms mapping
   - name: EntitySynonymMapper
+  
+  # Response selector
   - name: ResponseSelector
     epochs: 100
     constrain_similarities: true
+  
+  # Fallback khi không chắc chắn
   - name: FallbackClassifier
-    threshold: 0.3
+    threshold: 0.4
     ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
-# No configuration for policies was provided. The following default policies were used to train your model.
-# If you'd like to customize them, uncomment and adjust the policies.
-# See https://rasa.com/docs/rasa/policies for more information.
+  # Memorize conversations
   - name: MemoizationPolicy
+    max_history: 5
+  
+  # Rules
   - name: RulePolicy
+    core_fallback_threshold: 0.3
+    core_fallback_action_name: "action_default_fallback"
+    enable_fallback_prediction: true
+  
+  # Unexpected intents
   - name: UnexpecTEDIntentPolicy
     max_history: 5
     epochs: 100
+  
+  # TED for dialogue
   - name: TEDPolicy
     max_history: 5
     epochs: 100
