--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -1,3 +1,14 @@
+# Rasa Chatbot Dependencies
+# Install: pip install -r requirements.txt
+
+# Database connection
 psycopg2-binary>=2.9
+
+# Environment variables
 python-dotenv>=1.0.0
+
+# HTTP requests to AI Service
 requests>=2.28.0
+
+# Note: rasa and rasa-sdk should be installed separately
+# pip install rasa rasa-sdk
